[tool.poetry]
name = "httpX"
version = "httpX.v1.3.1"
description = "Sharp Karambit for web Domain and Account Takeover."
authors = ["Sulaiman <byt3n33dl3@proton.me>"]
readme = "README.md"
homepage = "https://github.com/byt3n33dl3/httpX/"
repository = "https://github.com/byt3n33dl3/httpX/"
exclude = ["tests/*", "dockerfiles/*"]
include = ["LICENSE.md", "httpx/signatures/*"]
license = "AGPL-3.0-only"
classifiers = [
    "Topic :: Security",
]
packages = [
    { include = "sharpexec"}
]

[tool.poetry.scripts]
src = 'httpx.console.witnessme:run'
wmapi = 'httpx.console.wmapi:run'
wmdb = 'httpx.console.wmdb:run'

[tool.poetry.dependencies]
python = "^3.13.0"
fastapi = "^0.55.1"
xmltodict = "^0.12.0"
terminaltables = "^3.1.0"
imgcat = "^0.5.0"
pyyaml = "^5.3.1"
aiosqlite = "^0.13.0"
prompt-toolkit = "^3.0.5"
pydantic = "^1.5.1"
uvicorn = "^0.11.5"
pyppeteer = "^0.2.2"
python-multipart = "^0.0.5"
jinja2 = "^2.11.2"
aiodns = "^2.0.0"
lxml = "^4.5.2"
aiofiles = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"
pylint = "*"
black = "^20.8b1"
requests = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
